2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03542] news support
	* file.c (loadGeneralFile): NNTP as well as NEWS
	* indep.c (url_unquote_char): check % hex hex
		(url_unquote): unquote except \0, \n, \r

2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03541] Re: W3M_LINE_NO / W3M_CURRENT_COLUMN
	* main.c (goLine): check searchKeyData()
		(set_buffer_environ): W3M_CURRENT_*

2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03536] <del>, <s>
	* file.c (HTMLtagproc1): <s>..</s> is [S:...:S]
		(HTMLtagproc0): <del> will delete <table>
	* fm.h (RB_S): added
	* html.c (TagMAP): <s>,</s>
			move <internal>, </internal>
	* html.h (HTML_S): added
		(HTML_N_S): added
		(HTML_INTERNAL): renumed
		(HTML_N_INTERNAL): ditto
		(MAX_HTMLTAG): add 2
	* rc.c (CMT_DISP_INS_DEL): update
	* table.c (feed_table_tag): add HTML_S, HTML_N_S
	* table.h (TBLM_S): added
		(TBLM_ANCHOR): renum
	* tagtable.tab: (strike, s): HTML_S
		(/strike, /s): HTML_N_S

2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03535] close anchor, quote <
	* file.c (HTMLtagproc1): close_anchor
	* frame.c (createFrameFile): quote <

2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03534] cleanup file.c
	* file.c (HTMLlineproc2body): cleanup

2002-12-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: w3m/0.3.2.2+cvs
	* NEWS: 0.3.2.2

2002-12-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* security fix
	* file.c (process_img): html_quote()

2002-12-06  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>

	* [w3m-dev 03530] save history
	* history.c (saveHistory): save tmpfile and rename

2002-12-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: ACCESSKEY, LINK_MENU

2002-12-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03529] Support of title, accesskey of anchor
	* anchor.c (putAnchor): arg title, key 
				initialize slave
		(registerHref): arg title, key