@@ -1,5 +1,10 @@
 2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03543] External URI loader (Debian closes: Bug#169962)
+	* file.c (loadGeneralFile): rewrite SCM_UNKNOWN
+
+2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03542] news support
 	* file.c (loadGeneralFile): NNTP as well as NEWS
 	* indep.c (url_unquote_char): check % hex hex
